added files to deploy to heroku

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "mongoose": "2.7.3",
     "hiredis": "*",
     "socket.io": "*",
-    "redis":"*"
+    "redis":"*",
+    "redis-url": "0.1.0"
   },
   "description": "lawlchats =========",
   "main": "lawlchats.js",
