--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node app"
   },
   "dependencies": {
-    "express": "3.0.0rc2",
+    "express": "3.0.x",
     "jade": "*",
     "mongodb": "1.1.2",
     "mongoose": "2.7.3",
